--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -4,7 +4,7 @@
             <img #charImg [src]="image" >
         </div>
         <div class="card-back">
-            <img src="/assets/images/back.png">
+            <img src="assets/images/back.png">
         </div>
     </div>
 </div>
