github pages bandaid url

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,7 +1,7 @@
 <div class="buttons">
     <button (click)="unFlipCards()">Unflip All</button>
     <button (click)="flipCards()">Flip All</button>
-    <button class="button-roller" (click)="goTo('/roller')">Character Roller</button>
+    <button class="button-roller" (click)="goTo('/touhou-gw/roller')">Character Roller</button>
   </div>
 <div class="content">
     
