--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -5,6 +5,10 @@
   </div>
 <div class="content">
     
-    <app-card #appCard *ngFor="let character of characterList$ | async" @fadeIn [firstName]="character.firstName" [image]="'assets/images/chara/'+character.firstName +'.webp' | lowercase" [id]="character.id" [bg]="character.WorkAbbreviation | lowercase"/>
+    <app-card #appCard 
+    *ngFor="let character of characterList$ | async" 
+    @fadeIn [firstName]="character.firstName" [image]="'assets/images/chara/'+character.firstName +'.webp' | lowercase" 
+    [id]="character.id" [bg]="character.WorkAbbreviation | lowercase"
+    />
   
 </div>
