--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -10,5 +10,9 @@
     @fadeIn [firstName]="character.firstName" [image]="'assets/images/chara/'+character.firstName +'.webp' | lowercase" 
     [id]="character.id" [bg]="character.WorkAbbreviation | lowercase"
     />
-  
+
+</div>
+
+<div class="footer">
+  <h1 class="credit">Art by <a href="https://twitter.com/socha1980/">粗茶 (socha)</a></h1>
 </div>
