--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -11,6 +11,8 @@
     [id]="character.id" [bg]="character.WorkAbbreviation | lowercase"
     />
 
+    <h1 class="credit">Thanks for watching the video, the API is currently down because I'm not in the mood to pay for Azure to keep it running at the moment.</h1>
+    <h1 class="credit">Catch me on Discord &#64;Karasca for questions, bye!</h1>
 </div>
 
 <div class="footer">
